--- a/python/flask-yummly/yummly/static/css/jumbotron-narrow.css
+++ b/python/flask-yummly/yummly/static/css/jumbotron-narrow.css
@@ -27,7 +27,7 @@ body {
 .footer {
   padding-top: 19px;
   color: #777;
-  border-top: 1px solid #e5e5e5;
+  text-align: center;
 }
 
 /* Customize container */
