--- a/python/flask-yummly/yummly/static/css/jumbotron-narrow.css
+++ b/python/flask-yummly/yummly/static/css/jumbotron-narrow.css
@@ -44,6 +44,7 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+  padding-top: 0px;
 }
 .jumbotron .btn {
   padding: 14px 24px;
