updated flask yummly

--- a/python/flask-yummly/yummly/templates/index.html
+++ b/python/flask-yummly/yummly/templates/index.html
@@ -36,53 +36,11 @@
             </form>
           </div>
 
-
-<!--           <div id="image">
-            <img src="{{ url_for('static', filename='img/fridge.png') }}" style="max-width: 125px;">
-          </div> -->
-
         </div>
 
         <div id="results"></div>
         <br>
-        <p class="new-link"><a href="#">Seach Again?</a></p>
-          <!-- totals -->
-<!--           {% if recipes %}
-            <span>We found <strong>{{ recipes['totalMatchCount'] }}</strong> recipes. Boom!<br>That's {{ recipes['totalMatchCount'] -1 }} too many.<br>Displaying <strong>1</strong> result...</span>
-          {% endif %} -->
-
-          <!-- errros -->
-<!--           {% if errors %}
-            {% for error in errors %}
-              <li class="alert alert-warning">{{ error }}</li>
-            {% endfor %}
-          {% endif %} -->
-
-          <!-- results -->
-<!--           {% if recipe %}
-            <br>
-            <strong>...and the winner is...</strong>
-            <br><br>
-            {% if recipe["imageUrlsBySize"] %}
-              <p>
-                <a href="http://www.yummly.com/recipe/{{ recipe["id"] }}">
-                 <img src={{ recipe['imageUrlsBySize']['90'].replace('s90-c', 's230-c') }} alt="Recipe photo" style="border-radius:50%;">
-                </a>
-              </p> -->
-<!--             {% endif %}
-            {% if recipe["recipeName"] %}
-              <h4><a href="http://www.yummly.com/recipe/{{ recipe["id"] }}">{{ recipe["recipeName"] }}</a></h4>
-            {% endif %} -->
-  <!--           {% if recipe["ingredients"] %}
-              <ul>
-                {% for ingredient in recipe["ingredients"] %}
-                  <li>{{ ingredient }}</li>
-                {% endfor %}
-              </ul>
-            {% endif %} -->
-<!--             <strong>...enjoy!</strong>
-          {% endif %} -->
-
+        <p class="new-link"><a href="#">Search Again?</a></p>
 
       </div> <!-- /jumbotron -->
 
