--- a/python/flask-yummly/yummly/templates/index.html
+++ b/python/flask-yummly/yummly/templates/index.html
@@ -1,55 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Let's eat, dammit!</title>
-    <!-- styles -->
-    <link href="http://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/cosmo/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="{{ url_for('static', filename='css/jumbotron-narrow.css') }}" rel="stylesheet" media="screen">
-    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
-  </head>
-  <body>
+{% extends "base.html" %}
 
-    <div class="container">
+{% block content %}
 
-      <div class="jumbotron" style="background-color: #fff;">
+<div class="jumbotron" style="background-color: #fff;">
 
-        <div id="top">
+<div id="top">
 
-          <div id="main">
-            <h1>Let's eat, dammit!</h1>
-            <p class="lead">Answering the question, "What's for dinner?"</p>
-          </div>
+  <div id="main">
+    <br>
+    <a href="/logout">Logout</a>
+    <h1>Let's eat, dammit!</h1>
+    <p class="lead">Answering the question, "What's for dinner?"</p>
+  </div>
 
-          <div id="search">
-            <form role="form" method="POST" id="post-form" onsubmit="return false">
-              <div class="form-group">
-                <center><input type="text" class="form-control ingredients" name="ingredient" placeholder="for example: chocolate, kale, high fructose corn syrup..." style="max-width: 400px;" required></center>
-              </div>
-              <button type="submit" class="btn btn-lg btn-info boom">Boom!</button>
-              <button type="submit" class="btn btn-md btn-default another"><span class="glyphicon glyphicon-thumbs-up"></span></button>
-              <button type="submit" class="btn btn-md btn-default another"><span class="glyphicon glyphicon-thumbs-down"></span></button>
-            </form>
-          </div>
+  <div id="search">
+    <form role="form" method="POST" id="post-form" onsubmit="return false">
+      <div class="form-group">
+        <center><input type="text" class="form-control ingredients" name="ingredient" placeholder="for example: chocolate, kale, high fructose corn syrup..." style="max-width: 400px;" required></center>
+      </div>
+      <button type="submit" class="btn btn-lg btn-info boom">Boom!</button>
+      <button type="submit" class="btn btn-md btn-default another"><span class="glyphicon glyphicon-thumbs-up"></span></button>
+      <button type="submit" class="btn btn-md btn-default another"><span class="glyphicon glyphicon-thumbs-down"></span></button>
+    </form>
+  </div>
 
-        </div>
+</div>
 
-        <div id="results"></div>
-        <br>
-        <p class="new-link"><a href="#">Search Again?</a></p>
+<div id="results"></div>
+<br>
+<p class="new-link"><a href="#">Search Again?</a></p>
 
-      </div> <!-- /jumbotron -->
+</div> <!-- /jumbotron -->
 
-    </div> <!-- /container -->
-
-    <!-- scripts -->
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-
-  </body>
-</html>
+{% endblock %}
