--- a/python/flask-yummly/yummly/templates/login.html
+++ b/python/flask-yummly/yummly/templates/login.html
@@ -7,10 +7,10 @@
 <form class="form-signin" role="form" method="post" action="">
   {{ form.csrf_token }}
   <p>
-    {{ form.username(placeholder="username") }}
+    {{ form.name(placeholder="name") }}
     <span class="error">
-      {% if form.username.errors %}
-        {% for error in form.username.errors %}
+      {% if form.name.errors %}
+        {% for error in form.name.errors %}
           {{ error }}
         {% endfor %}
       {% endif %}
