--- a/angular/projects/angular-shopping-cart/src/css/main.css
+++ b/angular/projects/angular-shopping-cart/src/css/main.css
@@ -1,1 +1,22 @@
-/* add custom styles */
+img {
+  max-width: 235px;
+}
+
+.float-right {
+  float: right;
+}
+
+.tea-name {
+  font-size: 24px;
+  margin: 1em 0;
+  font-weight: bold;
+}
+
+.image-column {
+  width: 20%;
+}
+
+.info-column {
+  width: 80%;
+}
+
