--- a/angular/projects/angular-kittens/src/js/components/main/main.view.html
+++ b/angular/projects/angular-kittens/src/js/components/main/main.view.html
@@ -20,7 +20,7 @@
         <td>{{kitten.bio}}</td>
         <td><img src="{{kitten.url}}"></td>
         <td>{{kitten.likes}}</td>
-        <td><a href="/#/comments" class="btn btn-primary btn-xs">View</a></td>
+        <td><a href="/#/comments/{{kitten.id}}" class="btn btn-primary btn-xs">View</a></td>
       </tr>
     </tbody>
   </table>
