finished angular-kittens part4

--- a/angular/projects/angular-kittens/src/css/main.css
+++ b/angular/projects/angular-kittens/src/css/main.css
@@ -3,5 +3,15 @@ body {
 }
 
 .selected {
-  color: red;
+  background-color: #5bc0de;
+  cursor: pointer;
+}
+
+.not-selected:hover {
+  background-color: #5bc0de;
+  cursor: pointer;
+}
+
+.arrow:hover {
+  cursor: pointer;
 }
