--- a/angular/projects/angular-kittens/src/js/components/comments/comments.view.html
+++ b/angular/projects/angular-kittens/src/js/components/comments/comments.view.html
@@ -1,4 +1,4 @@
-<h1>Comments</h1>
+<h1>Comments for <em>{{commentsCtrl.kittenName}}</em> Kitten</h1>
 <hr><br>
 
 <a ng-if="!commentsCtrl.isVisible" ng-click="commentsCtrl.showForm()" class="btn btn-primary btn-xs">Add Comment</a>
